# quantum_CNN

./: .gitignore  README.md  pyproject.toml
src/: hybrid_cnn_qnn.py  hybrid_cnn_qnn_gpu.py
src/utils/: ansatz.py  data_pipeline.py  feature_maps.py
